<resources>
    <string name="app_name">Meme Cabin</string>
    <string name="action_settings">Settings</string>
    <string name="skip">SKIP</string>
    <string name="memberLogin">Member Login(email)</string>
    <string name="withFacebook">Get On With Facebook</string>
    <string name="withEmailaddress">Register with email address</string>
    <string name="messageLoginFb"><i>Don\'t worry. It\'s only to sync this app between devices.</i></string>
    <string name="emailAddress">Email address</string>
    <string name="password">Password</string>
    <string name="verifyPassword">Verify Password</string>
    <string name="register">Register!</string>
    <string name="forgotPassword"> &lt;u>Forgot current\npassword?&lt;/u></string>
    <string name="login">Login!</string>
    <string name="startoday">Where do you want to start today?</string>
    <string name="memesEveryone">Memes for Everyone</string>
    <string name="motivational">Motivational &amp;Inspirational</string>
    <string name="racyMemes">Racy Memes</string>
    <string name="tranding">Trending &amp; Popular</string>
    <string name="shareMeme">Send us an AWESOME Meme!</string>
    <string name="favorites">Your Saved Favorites\n()</string>
    <string name="comingsoon">Single Dad\nLaughing App</string>
    <string name="messageShowfirst">Racy Memes contains content that may\nnot be suitable for children.You cool\nwith that?</string>
    <string name="noWorries">Got it! No worries here!</string>
    <string name="iKnow">I know. Don\'t show\nme this again.</string>
    <string name="yikes">Yikes! Let me set\na passcode!</string>
    <string name="getMe">Get me the check out of here!\n(and remove this icon from my home screen)</string>
    <string name="goodIdea">Yeah. Probably a good idea.</string>
    <string name="enterCode">Type a 4-digit code\n(You can disable this later in app preferences)</string>
    <string name="sharePicture">Share an AWESOME meme!</string>
    <string name="pictureLoadInfo">Sharing a meme is super easy.\nJust tap the button below to\nupload your meme now!</string>
    <string name="sendIt">SEND IT!</string>
    <string name="gotIt">GOT IT!\n(thanks!)</string>
    <string name="preferences">Preferences</string>
    <string name="changePass">CHANGE PASSWORD</string>
    <string name="showNotifications">Show\nNotifications</string>
    <string name="memenHome">Racy Memes on Home Screen</string>
     <string name="spiffyonoff">Spiffy gifs on Home Screen</string>
      <string name="sdlonoff">SDL app on Home Screen</string>
    <string name="lockUnlock">LOCK/UNLOCK Racy Memes</string>
    <string name="type4digit">Type your 4-digit code to permanently unlock</string>
    <string name="cnaunLock">You can lock it again at any time.</string>
    <string name="changeyourPass">CHANGE YOUR PASSWORD</string>
    <string name="lookup">Look at you, all safe and stuff.\nAwesome.</string>
    <string name="oldpass">OLD PASSWORD</string>
    <string name="newPass">NEW PASSWORD</string>
    <string name="repetPass">RETYPE NEW PASSWORD</string>
    <string name="findyourNext">FIND YOUR NEXT LAUGH</string>
    <string name="nextPush">FIND YOUR NEXT PUSH</string>
    <string name="theMomentlife">the moment life calls for it</string>
    <string name="todaysMemes">Top Memes: Last 24 Hours</string>
    <string name="tomMemes">Top Memes:</string>
    <string name="last7Days">Last 7 Days</string>
    <string name="last30Days">Last 30 Days</string>
    <string name="last90Days">Last 90 Days</string>
    <string name="Openswiping">Open any meme to start swiping! </string>
    <string name="number1">#1</string>
    <string name="totalsLikes">Total\nLikes\n</string>
    <string name="todaysLikes">Todays\nLikes\n(204)</string>
    <string name="toSatartSwiping">Open any meme to start swiping!</string>
    <string name="markall">&lt;u>Mark all as read.&lt;/u></string>
    <string name="markAll">MARK ALL MEMES AS READ</string>
    <string name="messageUndo">Are you sure you want to do that?\n(it can\'t be undone)</string>
    <string name="doIt">Yep, Do it!</string>
    <string name="yesNdo">Yep, and don\'t ask again.</string>
    <string name="noTake">No. Take me back!</string>
    <string name="messageFriends">When you catch a fish and release\n it..does it go back and tell its friends it\nwas abducted by aliens?</string>
    <string name="saveOrshare">SAVE OR SHARE THIS MEME!</string>
    <string name="afterswipeCon">Wow, you\'ve reached\nthe end of the memes!</string>
    <string name="whattodo">What do you want to do next?</string>
    <string name="keepme">Keep me here</string>
    <string name="backFirst">Back to First Meme</string>
    <string name="viewFavourites">View My Favorites</string>
    <string name="youSure">You sure you want to\ngo back to very first meme? </string>
    <string name="weJust">We just want to make sure.</string>
    <string name="yepTake">Yep, take me.</string>
    <string name="yepDoagain">Yep, don\'t show this again.</string>
    <string name="umCancel">Um. Cancel that.</string>
    <string name="yourSavelife">Your Saved life Favorites(7)</string>
    <string name="openswiping">Open any meme to start swiping!</string>
    <string name="rateThisapp">Rate this App! (5 Stars I Hope!)</string>
    <string name="addisable">Disable Ads</string>
    <string name="getSdl">Get the SDL App (coming soon!)</string>
    <string name="getSdl1">Get the SDL App</string>
    <string name="singlefb">Single Dad Laughing on Facebook</string>
    <string name="singleing">Single Dad Laughing on Instagram</string>
    <string name="disAdd">DISABLE ADS?</string>
    <string name="awesomeApps">How can I blame you?!\nThis app is awesome!</string>
    <string name="chargeYears">Disable for $0.99/year</string>
    <string name="chargeForever">Disable forever for $4.99</string>
    <string name="noChange">Nah. I changed my mind.</string>
    <string name="Status">Status</string>
    <string name="reportcheckerror">Please agree to the terms before sending this report.</string>
    <string name="checkInternet">No Internet Connection</string>
    <string name="PleaseEnterEmail">Please Enter Email Address</string>
    <string name="PleaseEnterValidEmail">Please Enter Valid Email Address</string>
    <string name="PleaseEnterPassword">Please Enter Password</string>
    <string name="PasswordDoesNotMatch">Oops! Your passwords don\'t match.</string>
    <string name="RegistationSuccessfully">Registation Successfully</string>
    <string name="Emailorpasswordiswrong">Oops, that login information doesn\'t work. Try again!</string>
    <string name="loginSuccessfully">Login Successfully</string>
    <string name="useCamera">Use Camera</string>
    <string name="chooseFromLibrary">Choose From Library</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="unlockpermanently">Type your 4-digit code to permanently unlock</string>
    <string name="racyMeme">RACY MEMES</string>
    <string name="app_id">841310412569994</string>
    <string name="toplast7">Top Memes: Last 7 days</string>
    <string name="toplast30">Top Memes: Last 30 days</string>
    <string name="toplast90">Top Memes: Last 90 days</string>
    <string name="empty"></string>
    <string name="firstCode">Please enter first pass code.</string>
    <string name="reenterpass">Please re-enter pass code.</string>
    <string name="secondCode">Please enter second pass code.</string>
    <string name="thirdCode">Please enter third pass code.</string>
    <string name="nlastCode">Please enter fourth pass code.</string>
    <string name="alertMessage">Pass code not match! Plsease try again....</string>
    <string name="successmsg">Your pass code set successfully</string>
    <string name="unlocksuccessmsg">Your pass code unlock successfully</string>
    <string name="enterOldpass">Please enter old password.</string>
    <string name="enterNewpass">Please enter new password.</string>
    <string name="enterRepeatpass">Please enter repeat password.</string>
    <string name="passwordnotsame">Password doesn\'t match. Please try again.</string>
    <string name="passwordChangedSuccess">Password Changed Successfully</string>
    <string name="passwordChangedUnsuccess">Password not changed</string>
    <string name="commingText">The Humaning \nApp</string>
    <string name="empltymessagefavorites">Tap this button at any time while\nyou\'re swiping through memes to\nadd memes to your favorites.</string>
    <string name="alerttouser">Bad news bear.\nThis section is for logged-in users only!</string>
    <string name="enterpasscodeagain">Enter your passcode to view this section!</string>
    <string name="addfavorites">Added to\nFavorites!</string>
    <string name="messagespicy">USE THE BOOKMARK BUTTON\n YOU SAVE YOUR PLACE WHEREVER\n YOU LIKE WHILE SWIPING.</string>
    <string name="text_enter_pass">Type your 4-digit code.</string>
    <string name="text_enter_pass_msg">Enter your passcode to view this section!</string>
    <string name="text_enter_4_digit_code">Pleaese Type your 4-digit code.</string>
    <string name="removefavorites">Removed from\nfavorites!</string>
    <string name="totallikes">Total\nLikes\n</string>
    <string name="seve7likes">7\nDays\n</string>
    <string name="thirty30likes">30\nDays\n</string>
    <string name="ninity90likes">90\nDays\n</string>
    <string name="todays2likes">Today\'s\nLikes\n</string>
    <string name="like2days">Likes\nToday\n</string>
    <string name="fordigitcode">Type a 4-digit code.</string>
    <string name="disavleappps">(You can disable this later in app preferences)</string>
    <string name="lockattime">You can lock it again at any time.</string>
    <string name="singledad">The Single Dad Laughing\nApp is Final Here!</string>
    <string name="wouldyoulike">Would you mind taking a sec to\nhelp a brother from another mother?</string>
    <string name="reaccessracy">Please type your 4-digit code\nto access Racy Memes.</string>
    <string name="sharetextfbortwitter">Sharing this from the MemeCabin app! (Get it on Android and iOS!)</string>
    <string name="twitter_consumer_key">2AFq1kLxU3ClwDNRC80gqNOEI</string>
    <string name="twitter_consumer_secret">rxkZoABENHB0tGiLbFIAMv6dfao6aOZGMOYHqDB5oY42M1YFpl</string>
    <string name="post_image">Post Image</string>
    <string name="post_tweet">Post Tweet</string>
    <string name="authentication_done_now_post_tweet_or_image_text"> Your app is authenticated. Now  you can post tweet/image on twitter. </string>
    <string name="please_wait_title"> Please wait </string>
    <string name="text_decide_title_1">Oops!</string>
    <string name="text_decide_title">You need to be logged-in to like or\nfavorite memes on MemeCabin.</string>
    <string name="text_decide_login">Got it, take me to login.</string>
    <string name="text_decide_no_thanks">Eek, No thanks.</string>
    <string name="ReportCopyrightedMeme">Report Copyrighted Meme</string>
    <string name="reportIconForSHare">Report icon for share screen \nbefore popup:</string>
    <string name="AtMemeCabin">At MemeCabin...</string>
    <string name="weAreReallyHardtoONly">We try really hard to only show memes which are meant to be shared and spread. If we got it wrong, let us know and we will remove your content as soon as possible!</string>
    <string name="YourFullName">YOUR FULL NAME</string>
    <string name="YourEmailAddress">YOUR EMAIL ADDRESS</string>
    <string name="iHoldAllRightToImage">I hold all rights to this image, or an image that was used in the creation of this meme, and I am requesting it to be removed from the MemeCabin app.</string>
    <string name="send">SEND!</string>
    <string name="memeYouAreReporting">Meme You \nare reporting:</string>
    <string name="moreDetailsAboutThisImage">MORE DETAILS ABOUT THIS IMAGE INCLUDING WHERE IT CAN BE FOUND ON YOUR SITE OR BLOG (IF APPLICABLE).</string>
</resources>