<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.memecabin.pro.MainActivity$PlaceholderFragment" >

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
         >

        <LinearLayout
            android:id="@+id/disableaddheadinglinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textlineswhite"
            android:paddingTop="@dimen/dpmarging10"
            android:paddingBottom="@dimen/dpmarging10"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/disAdd"
                android:textColor="@color/bagoni"
                android:textSize="@dimen/marallpopupheader"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/awesomeApps"
                android:textColor="@color/gray"
                android:textSize="@dimen/markallpopupsubheader" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/disablefor99"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disableaddheadinglinear"
            android:layout_alignLeft="@+id/disableaddheadinglinear"
            android:layout_alignRight="@+id/disableaddheadinglinear"
            android:background="@drawable/textlines1"
            android:gravity="center"
            android:onClick="buyForOneYear" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chargeYears"
                android:textColor="@color/black"
                android:padding="@dimen/pouppadingmemetb"
                android:textSize="@dimen/marallpopupheader"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/disableforever99"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disablefor99"
            android:layout_alignLeft="@+id/disablefor99"
            android:layout_alignRight="@+id/disablefor99"
            android:background="@drawable/textlines1"
            android:gravity="center"
            android:onClick="buyLifeTime" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/chargeForever"
                android:textColor="@color/black"
                android:padding="@dimen/pouppadingmemetb"
                android:textSize="@dimen/marallpopupheader"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nahichangemind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disableforever99"
            android:layout_alignLeft="@+id/disableforever99"
            android:layout_alignRight="@+id/disableforever99"
            android:background="@drawable/textlines1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/noChange"
                android:padding="@dimen/pouppadingmemetb"
                android:textColor="@color/black"
                android:textSize="@dimen/marallpopupheader"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>